Adding new fonts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,16 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+body h1, h2, h3, h4, h5, h6{
+  font-family: var(--microgramma-font);
+  text-transform: uppercase !important;
+}
+
+body p, ul, li, a, span, input, label, textarea, button, table{
+  font-family: var(--questrial-font) !important;
+}
+
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
