--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,7 +31,7 @@ body h1, h2, h3, h4, h5, h6{
   text-transform: uppercase !important;
 }
 
-body p, ul, li, a, span, input, label, textarea, button, table{
+body p, ul, li, a, span, input, label, textarea, button, table, option, select{
   font-family: var(--questrial-font) !important;
 }
 
